--- a/assignments.html
+++ b/assignments.html
@@ -8,6 +8,7 @@
     <h1>My Assignments</h1>
     <p>Here are my assignments for <strong>MUMT 301</strong></p>
     <h2><a href="questionnaire.txt">Assignment 1</a></h2>
-    <p>To go back to my <a href="index.html">homepage</a></p>
+    <h2><a href="index.html">Assignment 2</a></h2>
+    <p>Go back to my <a href="index.html">homepage</a></p>
   </body>
 </html>
