--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Homepage</h1>
     <h2>Who Am I?</h2>
     <p>My name is Naomi Fung. I'm currently a third year Mechanical Engineering student doing a minor in Musical Applications of Technology. In my free time, I enjoy going out with friends, playing guitar, thrifting, or exploring the city with my Discman and listening to some CDs. I love all kinds of music, such as indie, hyperpop, rap, punk, alternative, etc. I'm from Vancouver, BC, and I think the West Coast is one of the most beautiful places on earth. Here's a photo of me during the summer after kayaking (I miss the ocean and mountains a ton). </p>
-    <p><img src="Images/kayak.jpg"></p>
+    <p><img src="Images/Kayak.jpg"></p>
     <h2>My Classes This Semester</h2>
     <p><a href="https://www.mcgill.ca/study/2021-2022/courses/math-271">MATH 271 Linear Algebra and Partial Differential Equations</a></p>
     <p><a href="https://www.mcgill.ca/study/2021-2022/courses/mech-240">MECH 240 Thermodynamics 1</a></p>
