assignment 2 first try

--- a/assignments.html
+++ b/assignments.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>Assignments</title>
   </head>
   <body>
@@ -9,6 +10,7 @@
     <p>Here are my assignments for <strong>MUMT 301</strong></p>
     <h2><a href="questionnaire.txt">Assignment 1</a></h2>
     <h2><a href="index.html">Assignment 2</a></h2>
+    <h2><a href="artist.html">Assignment 3</a></h2>
     <p>Go back to my <a href="index.html">homepage</a></p>
   </body>
 </html>
