--- a/index.html
+++ b/index.html
@@ -3,31 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Naomi Fung</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Homepage</h1>
-    <h2>Who Am I?</h2>
-    <p>My name is Naomi Fung. I'm currently a third year Mechanical Engineering student doing a minor in Musical Applications of Technology. In my free time, I enjoy going out with friends, playing guitar, thrifting, or exploring the city with my Discman and listening to some CDs. I love all kinds of music, such as indie, hyperpop, rap, punk, alternative, etc. I'm from Vancouver, BC, and I think the West Coast is one of the most beautiful places on earth. Here's a photo of me during the summer after kayaking (I miss the ocean and mountains a ton). </p>
+    <h1>NAOMI FUNG</h1>
+    <h2>About Me</h2>
+    <p id="intro">My name is Naomi Fung. I'm currently a third year Mechanical Engineering student doing a minor in Musical Applications of Technology. In my free time, I enjoy going out with friends, playing guitar, thrifting, or exploring the city with my Discman and listening to some CDs. I love all kinds of music, such as indie, hyperpop, rap, punk, alternative, etc. I'm from Vancouver, BC, and I think the West Coast is one of the most beautiful places on earth. Here's a photo of me during the summer after kayaking (I miss the ocean and mountains a ton). </p>
     <p><img src="Images/Kayak.jpg"></p>
     <h2>My Classes This Semester</h2>
-    <p><a href="https://www.mcgill.ca/study/2021-2022/courses/math-271">MATH 271 Linear Algebra and Partial Differential Equations</a></p>
-    <p><a href="https://www.mcgill.ca/study/2021-2022/courses/mech-240">MECH 240 Thermodynamics 1</a></p>
-    <p><a href="https://www.mcgill.ca/study/2021-2022/courses/mech-360">MECH 360 Principles of Manufacturing</a></p>
-    <p><a href="https://www.mcgill.ca/study/2021-2022/courses/mech-314">MECH 314 Dynamics of Mechanisms</a></p>
-    <p><a href="https://www.mcgill.ca/study/2021-2022/courses/mumt-301">MUMT 301 Music and the Internet</a></p>
-    <p><a href="https://www.mcgill.ca/study/2021-2022/courses/mumt-202">MUMT 202 Fundamentals of New Media</a></p>
+    <p id="classes"><a href="https://www.mcgill.ca/study/2021-2022/courses/math-271">MATH 271 Linear Algebra and Partial Differential Equations</a><br><a href="https://www.mcgill.ca/study/2021-2022/courses/mech-240">MECH 240 Thermodynamics 1</a><br><a href="https://www.mcgill.ca/study/2021-2022/courses/mech-360">MECH 360 Principles of Manufacturing</a><br>
+    <a href="https://www.mcgill.ca/study/2021-2022/courses/mech-314">MECH 314 Dynamics of Mechanisms</a><br>
+    <a href="https://www.mcgill.ca/study/2021-2022/courses/mumt-301">MUMT 301 Music and the Internet</a><br>
+    <a href="https://www.mcgill.ca/study/2021-2022/courses/mumt-202">MUMT 202 Fundamentals of New Media</a></p>
     <h2>My Classmates</h2>
-    <p><a href="https://github.com/mumt301/hteyssier">Hector Teyssier</a></p>
-    <p><a href="https://github.com/mumt301/orosze">Eric Orosz</a></p>
-    <p><a href="https://github.com/mumt301/Sarah-Gao">Sarah Gao</a></p>
-    <p><a href="https://github.com/mumt301/raviraina">Ravi Raina</a></p>
-    <p><a href="https://github.com/mumt301/SidAlHussaini">Sid Al Hussaini</a></p>
-    <p><a href="https://github.com/mumt301/beryl">Beryl Arnould</a></p>
-    <p><a href="https://github.com/mumt301/Asu_Simla_Ayduran">Asu Simla Ayduran</a></p>
-    <p><a href="https://github.com/mumt301/tibetahunbay_assignment1">Tibet Ahunbay</a></p>
-    <p><a href="https://github.com/mumt301/Rebecca-Lee">Rebecca Lee</a></p>
-    <p><a href="https://github.com/mumt301/nicolesue">Nicole Sue</a></p>
-    <p><a href="https://github.com/mumt301/Jamie-Oneschuk-Repository-">Jamie Oneschuk</a></p>
+    <p id="classmates"><a href="https://github.com/mumt301/hteyssier">Hector Teyssier</a><br>
+    <a href="https://github.com/mumt301/orosze">Eric Orosz</a><br>
+    <a href="https://github.com/mumt301/Sarah-Gao">Sarah Gao</a><br>
+    <a href="https://github.com/mumt301/raviraina">Ravi Raina</a><br>
+    <a href="https://github.com/mumt301/SidAlHussaini">Sid Al Hussaini</a><br>
+    <a href="https://github.com/mumt301/beryl">Beryl Arnould</a><br>
+    <a href="https://github.com/mumt301/Asu_Simla_Ayduran">Asu Simla Ayduran</a><br>
+    <a href="https://github.com/mumt301/tibetahunbay_assignment1">Tibet Ahunbay<br>
+    <a href="https://github.com/mumt301/Rebecca-Lee">Rebecca Lee</a><br>
+    <a href="https://github.com/mumt301/nicolesue">Nicole Sue</a><br>
+    <a href="https://github.com/mumt301/Jamie-Oneschuk-Repository-">Jamie Oneschuk</a></p>
     <h2><a href="assignments.html">My Assignments</a></h2>
   </body>
 </html>
