--- a/discography.html
+++ b/discography.html
@@ -7,7 +7,7 @@
   </head>
   <body id="discography">
     <h1>Discography</h1>
-    <p id="disc"><img src="album1.jpeg" alt=""/><br>Gorillaz (2001)<br><img src="album2.png" alt=""/><br>Demon Days (2005)<br><img src="https://upload.wikimedia.org/wikipedia/en/d/d1/Plasticbeach452.jpg" alt=""/><br>Plastic Beach (2010)<br><img src="https://albumart.besteveralbums.com/albumart/album_large_14378_4e40d64795a30.jpg" alt=""/><br>The Fall (2010)<br><img src="https://upload.wikimedia.org/wikipedia/en/a/a6/HumanzGorillaz.png" alt=""/><br>Humanz (2017)<br><img src="https://upload.wikimedia.org/wikipedia/en/7/79/Gorillaz_-_The_Now_Now.jpg" alt=""/><br>The Now Now (2018)<br><img src="https://static.wikia.nocookie.net/kong/images/4/4d/Song_Machine%2C_Season_One_-_Strange_Timez.jpg/revision/latest?cb=20200914172947" alt=""/><br>Song Machine, Season One: Strange Timez (2020)<br></p>
+    <p id="disc"><img src="album1.jpeg" alt=""/><br>Gorillaz (2001)<br><img src="album2.png" alt=""/><br>Demon Days (2005)<br><img src="https://upload.wikimedia.org/wikipedia/en/d/d1/Plasticbeach452.jpg" alt=""/><br>Plastic Beach (2010)<br><img src="https://albumart.besteveralbums.com/albumart/album_large_14378_4e40d64795a30.jpg" alt=""/><br>The Fall (2010)<br><img src="https://upload.wikimedia.org/wikipedia/en/a/a6/HumanzGorillaz.png" alt=""/><br>Humanz (2017)<br><img src="https://upload.wikimedia.org/wikipedia/en/7/79/Gorillaz_-_The_Now_Now.jpg" alt=""/><br>The Now Now (2018)<br><img src="https://upload.wikimedia.org/wikipedia/en/e/ec/Song_Machine_S1_Strange_timez.jpg" alt=""/><br>Song Machine, Season One: Strange Timez (2020)<br></p>
 
   <h2><a href="artist.html">Homepage</a></h2>
   </body>
