tryna fix the images

--- a/artist.html
+++ b/artist.html
@@ -11,7 +11,7 @@
   <div class="column" id="column1">
     
     <h2><a href="biography.html">BIOGRAPHY</a></h2>
-    <img src=2D.png>
+    <img src=character1.png>
   </div>
 
   <div class="column" id="column2">
