--- a/assignments.html
+++ b/assignments.html
@@ -11,6 +11,7 @@
     <h2><a href="questionnaire.txt">Assignment 1</a></h2>
     <h2><a href="index.html">Assignment 2</a></h2>
     <h2><a href="artist.html">Assignment 3</a></h2>
+    <h2><a href="assignment4.html">Assignment 4</a></h2>
     <p>Go back to my <a href="index.html">homepage</a></p>
   </body>
 </html>
