classmates sites fix

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <a href="https://www.mcgill.ca/study/2021-2022/courses/mumt-202">MUMT 202 Fundamentals of New Media</a></p>
     <h2>My Classmates</h2>
     <p id="classmates"><a href="https://github.com/mumt301/hteyssier">Hector Teyssier</a><br>
-    <a href="https://github.com/mumt301/orosze">Eric Orosz</a><br>
-    <a href="https://github.com/mumt301/Sarah-Gao">Sarah Gao</a><br>
-    <a href="https://github.com/mumt301/raviraina">Ravi Raina</a><br>
-    <a href="https://github.com/mumt301/SidAlHussaini">Sid Al Hussaini</a><br>
-    <a href="https://github.com/mumt301/beryl">Beryl Arnould</a><br>
-    <a href="https://github.com/mumt301/Asu_Simla_Ayduran">Asu Simla Ayduran</a><br>
-    <a href="https://github.com/mumt301/tibetahunbay_assignment1">Tibet Ahunbay<br>
-    <a href="https://github.com/mumt301/Rebecca-Lee">Rebecca Lee</a><br>
-    <a href="https://github.com/mumt301/nicolesue">Nicole Sue</a><br>
-    <a href="https://github.com/mumt301/Jamie-Oneschuk-Repository-">Jamie Oneschuk</a></p>
+      <br /><a href="https://mumt301.github.io/beryl/">Beryl Arnould</a>
+      <br /><a href="https://mumt301.github.io/orosze/">Eric Orosz</a>
+      <br /><a href="https://mumt301.github.io/hteyssier/">Hector Teyssier</a>
+      <br /><a href="https://mumt301.github.io/Jamie-Oneschuk-Repository-/">Jamie Oneschuk</a>
+      <br /><a href="https://mumt301.github.io/raviraina/">Ravi Raina</a>
+      <br /><a href="https://mumt301.github.io/nicolesue/">Nicole Sue</a>
+      <br /><a href="https://mumt301.github.io/Rebecca-Lee/">Rebecca Lee</a>
+      <br /><a href="https://mumt301.github.io/Sarah-Gao/">Sarah Gao</a>
+      <br /><a href="https://mumt301.github.io/SidAlHussaini/">Sid Al Hussaini</a>
+      <br /><a href="https://mumt301.github.io/tibetahunbay/">Tibet Ahunbay</a>
     <h2><a href="assignments.html">My Assignments</a></h2>
   </body>
 </html>
