update to website

--- a/assignments.html
+++ b/assignments.html
@@ -13,6 +13,7 @@
     <h2><a href="artist.html">Assignment 3</a></h2>
     <h2><a href="assignment4.html">Assignment 4</a></h2>
     <h2><a href="Assignment 6.html">Assignment 6</a></h2>
+    <h2><a href="assignment7.html">Assignment 7</a></h2>
     <p>Go back to my <a href="index.html">homepage</a></p>
   </body>
 </html>
