--- a/assignment7.html
+++ b/assignment7.html
@@ -49,10 +49,10 @@
             </select>
 
            
-            <label for="minfreq">Minimum Frequency (must be between 220Hz and 440Hz)</label>
+            <label for="minfreq">Minimum Frequency</label>
             <input type="number" id="minfreq" name="minfreq" min="220" max="440" value="220">
 
-            <label for="maxfreq">Maximum Frequency (must be between 6600Hz and 880Hz)</label>
+            <label for="maxfreq">Maximum Frequency</label>
             <input type="number" id="maxfreq" name="maxfreq" min="660" max="880" value="880">
             
             <label for="semitones">Harmonic Interval</label>
