--- a/assignments.html
+++ b/assignments.html
@@ -14,7 +14,7 @@
     <h2><a href="assignment4.html">Assignment 4</a></h2>
     <h2><a href="Assignment 6.html">Assignment 6</a></h2>
     <h2><a href="assignment7.html">Assignment 7</a></h2>
-    <h2><a href="finalproject.html">Assignment 7</a></h2>   
+    <h2><a href="finalproject.html">Final Project</a></h2>   
     <p>Go back to my <a href="index.html">homepage</a></p>
   </body>
 </html>
